--- a/SimulateBank/Broker/App.config
+++ b/SimulateBank/Broker/App.config
@@ -4,13 +4,13 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-  </startup>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="DBSimulateBankEntities" connectionString="metadata=res://*/ModeloSimulateBank.csdl|res://*/ModeloSimulateBank.ssdl|res://*/ModeloSimulateBank.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-8G538RQ\SQLEXPRESS;initial catalog=DBSimulateBank;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
