--- a/SimulateBank/SimulateBank/SimulateBank.csproj
+++ b/SimulateBank/SimulateBank/SimulateBank.csproj
@@ -149,5 +149,15 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Controladora\Controladora.csproj">
+      <Project>{0a09fc3f-571d-44da-913c-df53cf000d1f}</Project>
+      <Name>Controladora</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Entidades\Entidades.csproj">
+      <Project>{097a7635-dcea-46e1-a47c-88e6bcfd496e}</Project>
+      <Name>Entidades</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
