--- a/SimulateBank/SimulateBank/App.config
+++ b/SimulateBank/SimulateBank/App.config
@@ -13,4 +13,9 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  
+  <connectionStrings>
+    <add name="DBSimulateBankEntities" connectionString="metadata=res://*/ModeloSimulateBank.csdl|res://*/ModeloSimulateBank.ssdl|res://*/ModeloSimulateBank.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-8G538RQ\SQLEXPRESS;initial catalog=DBSimulateBank;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+
 </configuration>
